@@ -1,3 +1,9 @@
+2012-03-25  Neil Williams  <linux@codehelp.co.uk>
+
+	* Reimplement the deprecated GCache which is due for
+	removal from glib as QStrCache, limited to just our
+	string cache requirements. Debian bug #665673.
+
 2011-05-07  Neil Williams  <linux@codehelp.co.uk>
 
  * Fix the internal link to qofsql - breaks chroot
